# fastapi-gen

./: .gitignore  HOMEBREW_SETUP.md  LICENSE  MANIFEST.in  Makefile  README.md  full_uv_migration.md  ideas.md  main.py  pyproject.toml  renovate.json
.github/: dependabot.yml  renovate.json
.github/actions/test-template/: action.yml
.github/workflows/: homebrew-release.yml  publish.yml  release.yml  test.yml
scripts/: check_dep_sync.py
src/cli/: __main__.py
src/templates/advanced/: Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/templates/advanced/tests/: test_main.py
src/templates/hello_world/: Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
src/templates/hello_world/tests/: test_main.py
src/templates/langchain/: .env_dev  Makefile  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  test_main.py
src/templates/langchain/tests/: test_main.py
src/templates/llama/: .env_dev  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
src/templates/llama/tests/: test_main.py
src/templates/nlp/: .env_dev  Makefile  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  test_main.py
src/templates/nlp/tests/: test_main.py
tests/: test_check_dep_sync.py  test_cli.py
