[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-fastapi-app"
version = "0.1.0"
description = "Advanced FastAPI Application with Authentication and Database"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-dotenv==1.1.1",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.43",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.3",
    "slowapi==0.1.9",
    "python-multipart==0.0.20",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "ruff==0.12.10",
    "pytest==8.4.1",
    "httpx==0.28.1",
    "pytest-asyncio==1.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["main"]