[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-fastapi-app"
version = "0.1.0"
description = "FastAPI Application with Llama.cpp Integration"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.116.1",
    "llama-cpp-python==0.3.16",
    "pydantic-settings==2.10.1",
    "uvicorn==0.35.0",
]

[tool.uv.build-constraints]
llama-cpp-python = { version = "0.3.16", skip_build = true }

[dependency-groups]
dev = [
    "ruff==0.12.10",
    "pytest==8.4.1",
    "httpx==0.28.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["main"]