[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-fastapi-app"
version = "0.1.0"
description = "FastAPI Application with NLP Capabilities"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.116.1",
    "transformers[torch]==4.55.4",
    "sentence-transformers==5.1.0",
    "datasets==4.0.0",
    "pydantic-settings==2.10.1",
    "torch==2.8.0",
    "uvicorn==0.35.0",
    "accelerate==1.10.0",
]

[dependency-groups]
dev = [
    "ruff==0.12.10",
    "pytest==8.4.1",
    "httpx==0.28.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["main"]